# godonger

./: .godonger.yaml  Cargo.toml  README.md
src/: main.rs  utils.rs
src/action/: init.rs  mod.rs
src/action/api/: new.rs
src/action/domain/: list.rs
src/action/domain/list/: mod.rs
src/command/: gen.rs  init.rs  mod.rs
src/command/api/: mod.rs  new.rs
src/command/domain/: mod.rs
src/command/domain/list/: mod.rs
src/config/: mod.rs
src/handle/: api.rs  boilerplates.rs  create_files.rs  edit_files.rs  lookup.rs  mod.rs  render.rs
src/tui/: domain_detail.rs  domain_list.rs  mod.rs  new_api.rs
