[package]
name = "godonger"
version = "0.1.0"
edition = "2021"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = ["go", "generate", "web"] 
edition = "2021" 
license = "MIT" 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/godonger"
documentation = "https://github.com/myyrakle/godonger/blob/master/README.md"
homepage = "https://github.com/myyrakle/godonger/blob/master/README.md"

[dependencies]
