[package]
name = "godonger"
version = "0.1.0"
edition = "2021"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = ["go", "generate", "web", "server"] 
license = "MIT" 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/godonger"
documentation = "https://github.com/myyrakle/godonger/blob/master/README.md"
homepage = "https://github.com/myyrakle/godonger/blob/master/README.md"

[dependencies]
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
crossterm = "0.27.0"
ratatui = "0.26.0"

[[bin]]
name = "godonger"
path = "./src/main.rs"
required-features = ["godonger"]

[[bin]]
name = "test"
path = "./src/test.rs"

[features]
default = ["godonger"]
godonger = ["cli"]
cli = ["atty", "structopt"]